<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>my_robot_interfaces</name>
  <version>0.0.0</version>
  <description>Custom ROS2 interfaces</description>

  <maintainer email="omkarhonrao108@gmail.com">omi</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- REQUIRED for creating interfaces -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- VERY IMPORTANT (fixes your current error) -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing (optional but standard) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
